# FavoriteGamesEntryBot

./: README.md  pyproject.toml
app/: config.py  main.py
app/bot/: main.py
app/handlers/: entry.py  moderation.py  start.py
app/keyboards/: entry.py  invite.py  moderation.py
app/states/: entry_form.py  moderation.py
