[project]
name = "favoritegamesentrybot"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Badretdinov",email = "artur.badretdinov11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.28.2,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.black]
target-version = ["py312"]
line-length = 88
